Busybee\InstituteBundle\Entity\Year to Core
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/ActivityBundle/Resources/config/doctrine/Activity.orm.yml
+++ b/src/Busybee/ActivityBundle/Resources/config/doctrine/Activity.orm.yml
@@ -61,7 +61,7 @@ Busybee\ActivityBundle\Entity\Activity:
                 space:
                     referencedColumnName: id
         year:
-            targetEntity: Busybee\InstituteBundle\Entity\Year
+            targetEntity: Busybee\Core\CalendarBundle\Entity\Year
             orderBy: {'firstDay': 'DESC'}
             joinColumns:
                 year:
