--- a/src/Busybee/Core/CalendarBundle/Resources/config/doctrine/SpecialDay.orm.yml
+++ b/src/Busybee/Core/CalendarBundle/Resources/config/doctrine/SpecialDay.orm.yml
@@ -40,7 +40,7 @@ Busybee\InstituteBundle\Entity\SpecialDay:
             nullable: true 
     manyToOne:
         year:
-            targetEntity: Busybee\InstituteBundle\Entity\Year
+            targetEntity: Busybee\Core\CalendarBundle\Entity\Year
             inversedBy: specialDays
             joinColumn:
                 name: year_id
