--- a/src/Busybee/Core/CalendarBundle/Resources/config/doctrine/Term.orm.yml
+++ b/src/Busybee/Core/CalendarBundle/Resources/config/doctrine/Term.orm.yml
@@ -31,7 +31,7 @@ Busybee\InstituteBundle\Entity\Term:
             nullable: true 
     manyToOne:
         year:
-            targetEntity: Busybee\InstituteBundle\Entity\Year
+            targetEntity: Busybee\Core\CalendarBundle\Entity\Year
             inversedBy: terms
             joinColumn:
                 name: year_id
