--- a/src/Busybee/Core/CalendarBundle/Resources/config/validation/Year.yml
+++ b/src/Busybee/Core/CalendarBundle/Resources/config/validation/Year.yml
@@ -1,4 +1,4 @@
-Busybee\InstituteBundle\Entity\Year:
+Busybee\Core\CalendarBundle\Entity\Year:
     constraints:
         - Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity: 
             fields: [name]
