--- a/src/Busybee/Core/CalendarBundle/Resources/config/validation/SpecialDay.yml
+++ b/src/Busybee/Core/CalendarBundle/Resources/config/validation/SpecialDay.yml
@@ -1,4 +1,4 @@
-Busybee\InstituteBundle\Entity\SpecialDay:
+Busybee\Core\CalendarBundle\Entity\SpecialDay:
     constraints:
         - Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity: 
             fields: [day]
