--- a/src/Busybee/Core/CalendarBundle/Resources/config/validation/Term.yml
+++ b/src/Busybee/Core/CalendarBundle/Resources/config/validation/Term.yml
@@ -1,4 +1,4 @@
-Busybee\InstituteBundle\Entity\Term:
+Busybee\Core\CalendarBundle\Entity\Term:
     constraints:
         - Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity: 
             fields: [name, year]
