Completion of Calendar to Core
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/SystemBundle/Resources/Defaults/Default.yml
+++ b/src/Busybee/SystemBundle/Resources/Defaults/Default.yml
@@ -1403,3 +1403,18 @@ settings:
         Temporary: Temporary
         Permanent: Permanent
         Visitor: Visitor
+    student.groups:
+        'Year 13': Y13
+        'Year 12': Y12
+        'Year 11': Y11
+        'Year 10': Y10
+        'Year 9': Y9
+        'Year 8': Y8
+        'Year 7': Y7
+        'Year 6': Y6
+        'Year 5': Y5
+        'Year 4': Y4
+        'Year 3': Y3
+        'Year 2': Y2
+        'Year 1': Y1
+        'Kinder': Y0
