--- a/src/Busybee/SystemBundle/Resources/Defaults/Australia.yml
+++ b/src/Busybee/SystemBundle/Resources/Defaults/Australia.yml
@@ -115,16 +115,16 @@ settings:
         Central and West African: '9100'
         Southern and East African: '9200'
     student.group:
-        Kinder: K
-        Year 1: Y1
-        Year 2: Y2
-        Year 3: Y3
-        Year 4: Y4
-        Year 5: Y5
-        Year 6: Y6
-        Year 7: Y7
-        Year 8: Y8
-        Year 9: Y9
-        Year 10: Y10
-        Year 11: Y11
-        Year 12: Y12
+        'Year 12': Y12
+        'Year 11': Y11
+        'Year 10': Y10
+        'Year 9': Y9
+        'Year 8': Y8
+        'Year 7': Y7
+        'Year 6': Y6
+        'Year 5': Y5
+        'Year 4': Y4
+        'Year 3': Y3
+        'Year 2': Y2
+        'Year 1': Y1
+        'Kinder': Y0
