--- a/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_0_03.yml
+++ b/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_0_03.yml
@@ -10,8 +10,20 @@ student.groups:
     description: Usually the year groups that attend this school.
     role: ROLE_REGISTRAR
     value: |
-        Year 7: Y7
-        Year 8: Y8
+        'Year 13': Y13
+        'Year 12': Y12
+        'Year 11': Y11
+        'Year 10': Y10
+        'Year 9': Y9
+        'Year 8': Y8
+        'Year 7': Y7
+        'Year 6': Y6
+        'Year 5': Y5
+        'Year 4': Y4
+        'Year 3': Y3
+        'Year 2': Y2
+        'Year 1': Y1
+        'Kinder': Y0
 student.enrolment.status:
     type: array
     displayName: Student Enrolment Status
