--- a/src/Busybee/People/PersonBundle/Resources/config/doctrine/Person.orm.yml
+++ b/src/Busybee/People/PersonBundle/Resources/config/doctrine/Person.orm.yml
@@ -110,7 +110,7 @@ Busybee\People\PersonBundle\Entity\Person:
             mappedBy: person
             nullable: true
         staff:
-            targetEntity: Busybee\StaffBundle\Entity\Staff
+            targetEntity: Busybee\People\StaffBundle\Entity\Staff
             cascade: [all]
             mappedBy: person
             nullable: true
