--- a/src/Busybee/ActivityBundle/Resources/config/doctrine/Activity.orm.yml
+++ b/src/Busybee/ActivityBundle/Resources/config/doctrine/Activity.orm.yml
@@ -67,17 +67,17 @@ Busybee\ActivityBundle\Entity\Activity:
                 year:
                     referencedColumnName: id
         tutor1:
-            targetEntity: Busybee\StaffBundle\Entity\Staff
+            targetEntity: Busybee\People\StaffBundle\Entity\Staff
             joinColumns:
                 tutor_1:
                     referencedColumnName: id
         tutor2:
-            targetEntity: Busybee\StaffBundle\Entity\Staff
+            targetEntity: Busybee\People\StaffBundle\Entity\Staff
             joinColumns:
                 tutor_2:
                     referencedColumnName: id
         tutor3:
-            targetEntity: Busybee\StaffBundle\Entity\Staff
+            targetEntity: Busybee\People\StaffBundle\Entity\Staff
             joinColumns:
                 tutor_3:
                     referencedColumnName: id
