--- a/src/Busybee/Core/PaginationBundle/Resources/config/services.yml
+++ b/src/Busybee/Core/PaginationBundle/Resources/config/services.yml
@@ -1,6 +1,6 @@
 services:
     pagination.Type:
-        class: Busybee\PaginationBundle\Form\PaginationType
+        class: Busybee\Core\PaginationBundle\Form\PaginationType
         arguments:
             - '@router'
         tags:
