--- a/composer.json
+++ b/composer.json
@@ -37,19 +37,8 @@
       "twig/extensions": "~1.4",
       "core23/dompdf-bundle": "~1.0",
       "league/oauth2-google": "~1.0",
-      "egulias/email-validator": "~2.1",
-      'busybee/person': "dev-master"
+      "egulias/email-validator": "~2.1"
     },
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/crayner/busybee-person.git"
-    },
-    {
-      "type": "path",
-      "url": "F:\\websites\\busybee-person"
-    }
-  ],
     "require-dev": {
       "sensio/generator-bundle": "~3.0",
       "symfony/phpunit-bridge": "~2.7"
