--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,14 +1,6 @@
-busybee_home:
-    resource: "@BusybeeHomeBundle/Resources/config/routing.yml"
-    prefix:   /
-
-busybee_security:
-    resource: "@BusybeeSecurityBundle/Resources/config/routing.yml"
-    prefix:   /security/
-
-busybee_system:
-    resource: "@SystemBundle/Resources/config/routing.yml"
-    prefix:   /system/
+busybee_bundles:
+    resource: .
+    type: advanced_extra
 
 busybee_curriculum:
     resource: "@BusybeeCurriculumBundle/Resources/config/routing.yml"
@@ -17,22 +9,6 @@ busybee_curriculum:
 busybee_institute:
     resource: "@BusybeeInstituteBundle/Resources/config/routing.yml"
     prefix:   /institute/
-
-busybee_person:
-    resource: "@BusybeePersonBundle/Resources/config/routing.yml"
-    prefix:   /person/
-
-busybee_staff:
-    resource: "@BusybeeStaffBundle/Resources/config/routing.yml"
-    prefix:   /staff/
-
-busybee_student:
-    resource: "@BusybeeStudentBundle/Resources/config/routing.yml"
-    prefix:   /student/
-
-busybee_family:
-    resource: "@BusybeeFamilyBundle/Resources/config/routing.yml"
-    prefix:   /family/
 
 busybee_time_table:
     resource: "@BusybeeTimeTableBundle/Resources/config/routing.yml"
@@ -49,11 +25,3 @@ busybee_attendance:
 busybee_period:
     resource: "@BusybeePeriodBundle/Resources/config/routing.yml"
     prefix:   /period/
-
-busybee_calendar:
-    resource: "@BusybeeCalendarBundle/Resources/config/routing.yml"
-    prefix:   /core/calendar/
-
-busybee_plugin:
-    resource: .
-    type: advanced_extra
