--- a/src/Busybee/AVETMISS/AVETMISSBundle/Resources/config/doctrine/Subject.orm.yml
+++ b/src/Busybee/AVETMISS/AVETMISSBundle/Resources/config/doctrine/Subject.orm.yml
@@ -40,12 +40,12 @@ Busybee\AVETMISS\AVETMISSBundle\Entity\Subject:
             targetEntity: Busybee\CurriculumBundle\Entity\Subject 
             cascade: [persist]
         createdBy:
-            targetEntity: Busybee\SecurityBundle\Entity\User
+            targetEntity: Busybee\Core\SecurityBundle\Entity\User
             joinColumns:
                 createdBy:
                     referencedColumnName: id
         modifiedBy:
-            targetEntity: Busybee\SecurityBundle\Entity\User
+            targetEntity: Busybee\Core\SecurityBundle\Entity\User
             joinColumns:
                 modifiedBy:
                     referencedColumnName: id
