--- a/src/Busybee/AVETMISS/AVETMISSBundle/Resources/config/doctrine/Report.orm.yml
+++ b/src/Busybee/AVETMISS/AVETMISSBundle/Resources/config/doctrine/Report.orm.yml
@@ -34,12 +34,12 @@ Busybee\AVETMISS\AVETMISSBundle\Entity\Report:
             type: datetime
     manyToOne:
         createdBy:
-            targetEntity: Busybee\SecurityBundle\Entity\User
+            targetEntity: Busybee\Core\SecurityBundle\Entity\User
             joinColumns:
                 created_by:
                     referencedColumnName: id
         modifiedBy:
-            targetEntity: Busybee\SecurityBundle\Entity\User
+            targetEntity: Busybee\Core\SecurityBundle\Entity\User
             joinColumns:
                 modified_by:
                     referencedColumnName: id
