--- a/src/Busybee/Core/PaginationBundle/Resources/config/services.yml
+++ b/src/Busybee/Core/PaginationBundle/Resources/config/services.yml
@@ -1,3 +1,9 @@
+parameters:
+    Pagination:
+        version: 0.0.01
+        settings:
+            resources:
+                - 'BusybeePaginationBundle/Resources/config/Settings/Settings_0_0_01.yml'
 services:
     pagination.Type:
         class: Busybee\Core\PaginationBundle\Form\PaginationType
