--- a/src/Busybee/People/PersonBundle/Resources/config/services.yml
+++ b/src/Busybee/People/PersonBundle/Resources/config/services.yml
@@ -53,6 +53,11 @@ parameters:
             contact:
                 route: contact_manage
                 prompt: pagination.person.contact
+    Person:
+        version: 0.0.01
+        settings:
+            resources:
+                - 'BusybeePersonBundle/Resources/config/Settings/Settings_0_0_01.yml'
 services:
     person.repository:
         class: Busybee\People\PersonBundle\Repository\PersonRepository
