--- a/src/Busybee/TimeTableBundle/Resources/config/services.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/services.yml
@@ -1,4 +1,9 @@
 parameters:
+    TimeTable:
+        version: '0.0.01'
+        settings:
+            resources:
+                - 'BusybeeTimeTableBundle/Resources/config/Settings/Settings_0_0_01.yml'
     TimeTablePagination:
         alias: t
         sortBy:
