--- a/src/Busybee/Core/SystemBundle/Resources/config/Settings/Settings_0_0_03.yml
+++ b/src/Busybee/Core/SystemBundle/Resources/config/Settings/Settings_0_0_03.yml
@@ -1,3 +1,5 @@
+System.version:
+    value: 0.0.03
 house.list:
     type: 'array'
     displayName: 'House List'
@@ -144,3 +146,7 @@ teachingload.column.maximum:
       displayName: Day Teaching Load Maximum
       description: The maximum number of periods in a timetable day that a teacher should have face to face teaching.
       role: ROLE_PRINCIPAL
+Version.System:
+    value: '0.0.03'
+Version.Database:
+    value: '0.0.03'
