--- a/src/Busybee/PeriodBundle/Resources/config/services.yml
+++ b/src/Busybee/PeriodBundle/Resources/config/services.yml
@@ -1,4 +1,6 @@
+parameters:
+    Period:
+        version: '0.0.01'
+        settings:
+            resources: 'BusybeePeriodBundle/Resources/config/Settings/Settings_0_0_01.yml'
 services:
-#    busybee_period.example:
-#        class: Busybee\PeriodBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
