AVETMISS Changes WIP
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/AVETMISS/AVETMISSBundle/Resources/config/doctrine/Client.orm.yml
+++ b/src/Busybee/AVETMISS/AVETMISSBundle/Resources/config/doctrine/Client.orm.yml
@@ -63,7 +63,7 @@ Busybee\AVETMISS\AVETMISSBundle\Entity\Client:
             type: datetime
     oneToOne:
         student:
-            targetEntity: Busybee\People\PersonBundle\Entity\Student
+            targetEntity: Busybee\People\StudentBundle\Entity\Student
     manyToOne:
         createdBy:
             targetEntity: Busybee\Core\SecurityBundle\Entity\User
